# romeo

./: README.md
romeo/: CMakeLists.txt  package.xml
romeo_description/: CMakeLists.txt  package.xml  setup.py
romeo_description/cloud/: Cylinder005_skip.qc  Cylinder005_skip_001.qc  LFinger32.qc  LFinger33.qc  LHand.qc  LHipPitch.qc  LKneePitch.qc  LShoulderYaw.qc  LThumb3.qc  LToe.qc  LWristPitch.qc  LWristRoll.qc  LWristYaw.qc  NeckPitch.qc  RFinger12.qc  RFinger22.qc  RFinger23.qc  RFinger31.qc  RFinger33.qc  RHipPitch.qc  RShoulderYaw.qc  RThumb2.qc  RThumb3.qc  cap_original.qc  qc_to_stpbv.sh
romeo_description/convex/: Cap-ch.txt  LEye-ch.txt  LFinger11-ch.txt  LFinger32-ch.txt  LHand-ch.txt  LShoulderYaw-ch.txt  LThumb1-ch.txt  LThumb3-ch.txt  NeckPitch-ch.txt  RFinger12-ch.txt  RFinger13-ch.txt  RFinger33-ch.txt  RKneePitch-ch.txt  RThumb1-ch.txt  RThumb3-ch.txt  RWristRoll-ch.txt  RWristYaw-ch.txt  Torso-ch.txt  TrunkYaw-ch.txt
romeo_description/launch/: display_generated.launch  romeo_desc_generated.launch
romeo_description/meshes/: Import_all_meshes_blender.py
romeo_description/rsdf/: LWristPitch.rsdf  RWristPitch.rsdf  l_ankle.rsdf  r_ankle.rsdf
romeo_description/src/romeo/: __init__.py  romeo.py  romeo_py
romeo_description/src/romeo_common/: __init__.py  romeo_common.py
romeo_description/stl/: Cylinder005_skip.stl  Cylinder005_skip_001.stl
romeo_description/stpbv/: LElbowYaw.txt  LFinger13.txt  LFinger32.txt  LFinger33.txt  LHand.txt  LThumb3.txt  LWristPitch.txt  LWristRoll.txt  RFinger22.txt  RFinger32.txt  RHand.txt  RHipPitch.txt  RKneePitch.txt  RThumb3.txt  RToe.txt  RWristYaw.txt  Torso.txt  TrunkYaw.txt  cap.txt
romeo_description/urdf/: romeo.urdf  romeo_fingers.xacro  romeo_sensors.xacro
romeo_description_mc/: CMakeLists.txt  package.xml
romeo_description_mc/cloud/: HeadRoll.qc  LAnkleRoll.qc  LElbowYaw.qc  LEye.qc  LFinger11.qc  LFinger12.qc  LFinger13.qc  LFinger21.qc  LFinger22.qc  LFinger23.qc  LFinger31.qc  LThumb1.qc  LThumb2.qc  RAnkleRoll.qc  RElbowYaw.qc  REye.qc  RFinger13.qc  RHand.qc  RKneePitch.qc  RThumb1.qc  RToe.qc  RWristPitch.qc  RWristRoll.qc  RWristYaw.qc  Torso.qc  TrunkYaw.qc  cap.qc
romeo_description_mc/convex/: HeadRoll-ch.txt  LAnkleRoll-ch.txt  LElbowYaw-ch.txt  LFinger12-ch.txt  LFinger13-ch.txt  LFinger21-ch.txt  LFinger22-ch.txt  LFinger23-ch.txt  LFinger31-ch.txt  LFinger33-ch.txt  LHipPitch-ch.txt  LKneePitch-ch.txt  LThumb2-ch.txt  LToe-ch.txt  LWristPitch-ch.txt  LWristRoll-ch.txt  LWristYaw-ch.txt  RAnkleRoll-ch.txt  RElbowYaw-ch.txt  REye-ch.txt  RFinger21-ch.txt  RFinger23-ch.txt  RFinger32-ch.txt  RHand-ch.txt  RHipPitch-ch.txt  RShoulderYaw-ch.txt  RThumb2-ch.txt  RToe-ch.txt  RWristPitch-ch.txt
romeo_description_mc/launch/: display_generated.launch  romeo_desc_generated.launch
romeo_description_mc/meshes/: Cap_simple.dae  Import_all_meshes_blender.py
romeo_description_mc/rsdf/: LWristPitch.rsdf  RWristPitch.rsdf  r_ankle.rsdf
romeo_description_mc/src/romeo_common/: romeo_common.py
romeo_description_mc/stl/: LAnkleRollBasic.stl  RAnkleRollBasic.stl
romeo_description_mc/stpbv/: HeadRoll.txt  LAnkleRoll.txt  LEye.txt  LFinger11.txt  LFinger12.txt  LFinger21.txt  LFinger22.txt  LFinger23.txt  LFinger31.txt  LHipPitch.txt  LKneePitch.txt  LShoulderYaw.txt  LThumb1.txt  LThumb2.txt  LToe.txt  LWristYaw.txt  NeckPitch.txt  RAnkleRoll.txt  RElbowYaw.txt  REye.txt  RFinger11.txt  RFinger13.txt  RFinger23.txt  RFinger33.txt  RShoulderYaw.txt  RThumb1.txt  RThumb2.txt  RWristPitch.txt  RWristRoll.txt
romeo_description_mc/urdf/: Lfoot.urdf  Rfoot.urdf  romeo.urdf  romeo_arms.xacro  romeo_cap.xacro  romeo_eyes.xacro  romeo_head.xacro  romeo_sensors.xacro  romeo_torso.xacro  romeo_visual_collisions.xacro
romeo_description_mc/urdf/romeo_generated_urdf/: romeo.urdf  romeo_cap.xacro
